Add public and private router

--- a/front/src/app/components/private/welcome/welcome.component.html
+++ b/front/src/app/components/private/welcome/welcome.component.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Actualizar mis datos personales</h5>
-                    <a routerLink="/user/information" class="btn btn-primary">Ver más</a>
+                    <a routerLink="/auth/user/information" class="btn btn-primary">Ver más</a>
                 </div>
             </div>
         </div>
@@ -23,8 +23,8 @@
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title">Conoce los servicios de ahorro</h5>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/user/savings">Solicitalo aquí</a>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/user/savings">Mi historial</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/savings">Solicitalo aquí</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/savings">Mi historial</a>
                 </div>
             </div>
         </div>
@@ -35,8 +35,8 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Conoce los servicios de credito</h5>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/user/credits">Solicitalo aquí</a>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/user/credits">Mi historial</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/credits">Solicitalo aquí</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/credits">Mi historial</a>
                 </div>
             </div>
         </div>
