--- a/front/src/app/components/private/admin/admin.component.html
+++ b/front/src/app/components/private/admin/admin.component.html
@@ -3,6 +3,7 @@
         <app-sidebar-admin></app-sidebar-admin>
     </div>
     <div class="col-xl-10">
-        <h1>HOLAAAA</h1>
+        <h1>Hola desde el admin panel</h1>
+        <router-outlet></router-outlet>
     </div>
 </div>
