Fix some routes and private components

--- a/front/src/app/components/private/admin/components/sidebar-admin/sidebar-admin.component.html
+++ b/front/src/app/components/private/admin/components/sidebar-admin/sidebar-admin.component.html
@@ -22,8 +22,8 @@
             </button>
             <div class="collapse show" id="home-collapse">
               <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                <li><a routerLink="/admin/aboutnew" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ahorros</a></li>
-                <li><a routerLink="/admin/agreements" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Acuerdos</a></li>
+                <li><a routerLink="/about" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ahorros</a></li>
+                <li><a routerLink="/auth/admin/welcome" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Acuerdos</a></li>
                 <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Reports</a></li>
               </ul>
             </div>
