--- a/front/src/app/components/private/admin/components/sidebar-admin/sidebar-admin.component.css
+++ b/front/src/app/components/private/admin/components/sidebar-admin/sidebar-admin.component.css
@@ -1,9 +1,14 @@
+.offcanvas-header {
+  background-color: rgba(250, 182, 0, 0.5);
+}
+
 main {
   height: 100vh;
   height: -webkit-fill-available;
   max-height: 100vh;
   overflow-x: auto;
   overflow-y: hidden;
+  background-color: rgba(250, 182, 0, 0.5);
 }
 
 .dropdown-toggle { outline: 0; }
@@ -17,7 +22,7 @@ main {
 .btn-toggle:hover,
 .btn-toggle:focus {
   color: rgba(var(--bs-emphasis-color-rgb), .85);
-  background-color: var(--bs-tertiary-bg);
+  background-color: var(--bs-warning);
 }
 
 .btn-toggle::before {
@@ -46,7 +51,7 @@ main {
 }
 .btn-toggle-nav a:hover,
 .btn-toggle-nav a:focus {
-  background-color: var(--bs-tertiary-bg);
+  background-color: var(--bs-warning);
 }
 
 .scrollarea {
