--- a/front/src/app/components/public/public.component.html
+++ b/front/src/app/components/public/public.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="body-container">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
 <app-whatsapp-button></app-whatsapp-button>
