--- a/front/src/app/components/private/user/components/user-info/user-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/user-info.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container-fluid mt-2">
   <div *ngIf="loading" class="text-center">
     <p>Cargando...</p>
   </div>
