Add new fields to models

--- a/front/src/app/components/public/login/login.component.html
+++ b/front/src/app/components/public/login/login.component.html
@@ -18,7 +18,7 @@
                 <input type="password" class="form-control" [(ngModel)]="contrasenia" name="contrasenia" placeholder="Tu contraseña">
               </div>
               <div class="col-md-12">
-                <button routerLink="auth/user/welcome" type="submit" class="btn btn-primary">Ingresar</button>
+                <button routerLink="/auth/user/welcome" type="submit" class="btn btn-primary">Ingresar</button>
               </div>
             </form>
           </div>
