--- a/front/src/app/components/private/components/sidebar/sidebar.component.css
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.css
@@ -13,6 +13,18 @@ main {
 
 .dropdown-toggle { outline: 0; }
 
+.btn-home {
+  padding: .25rem .5rem;
+  font-size: large;
+  font-weight: 600;
+  color: var(--bs-emphasis-color);
+  background-color: transparent;
+}
+.btn-home:hover {
+  color: rgba(var(--bs-emphasis-color-rgb), .85);
+  background-color: var(--bs-warning);
+}
+
 .btn-toggle {
   padding: .25rem .5rem;
   font-weight: 600;
