Add request in frontend

--- a/front/src/app/components/private/welcome/welcome.component.html
+++ b/front/src/app/components/private/welcome/welcome.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="card-body ">
                     <h5 class="card-title">Conoce los servicios de ahorro</h5>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/savings">Solicitalo aquí</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/request/saving">Solicitalo aquí</a>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/savings">Mi historial</a>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Conoce los servicios de credito</h5>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/credits">Solicitalo aquí</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/request/credit">Solicitalo aquí</a>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/credits">Mi historial</a>
                 </div>
             </div>
